# tbs-chat

./: .clang-format  CMakeLists.txt  README.md
include/: AsioTCPServer.hpp  Message.hpp  TCPClient.hpp  client.hpp  config.h  server.hpp
include/client/: ParseCLI.hpp
include/core/: Converter.hpp  Core.hpp  Deserializer.hpp  Serializer.hpp
include/ui/: Chat.hpp  Info.hpp  MessageComponent.hpp  Messages.hpp  TabMenu.hpp  TextArea.hpp  Users.hpp
src/: CMakeLists.txt  test.cpp
src/client/: CMakeLists.txt  ParseCLI.cpp  TCPClient.cpp  client.cpp  main.cpp
src/core/: CMakeLists.txt  Converter.cpp  Deserializer.cpp  Makefile  Package.pb.cc  Package.pb.h  Package.proto  Serializer.cpp
src/server/: AsioTCPServer.cpp  CMakeLists.txt  main.cpp  server.cpp  server.hpp
src/ui/: CMakeLists.txt  Chat.cpp  Info.cpp  Messages.cpp  TabMenu.cpp  TextArea.cpp  Users.cpp  main.cpp
